# Financial_QA_ChatBot

./: .env.example  .gitignore  README.md  chunker.py  data_loader.py  embedder.py  example_questions.txt  pyproject.toml  requirements-colab.txt  requirements.txt  retriever.py
.streamlit/: config.toml
data/evaluation/: ablation_20260424_192032.csv  ablation_base.csv  ablation_extractive.json  ablation_finetuned.csv  ablation_qwen_base.json  ablation_qwen_lora.json  ablation_retrieval_no_reranker.json  ablation_retrieval_reranker.json  ablation_summary.csv  sample_questions.csv
demo/: app.py
notebooks/: finetune_qwen7b_colab.ipynb
scripts/: colab_setup.sh  colab_start_ngrok.py  colab_start_qwen_server.py  colab_start_qwen_server.sh  compare_results.py  run_ablation.py
src/finrag/: __init__.py  adapter_config.py  answer.py  answer_formatting.py  benchmarks.py  build_index.py  chunk_documents.py  config.py  download_sec_filings.py  evaluate.py  evaluate_benchmark.py  fine_tuning.py  hallucination_detection.py  hf_adapter_answer.py  live_retrieve.py  models.py  query.py  qwen_server.py  remote_qwen.py  rerank.py  retrieve.py  sec_live.py  train_qlora.py  uploaded_filing.py
src/finrag/evaluation/: __init__.py  ablation.py  metrics.py
src/finrag/hallucination/: __init__.py  claim_extractor.py  detector.py  nli_verifier.py
src/finrag/pipeline/: __init__.py  chunker.py  load_datasets.py
tests/: test_answer_formatting.py
