[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finrag"
version = "0.1.0"
description = "Financial retrieval-augmented question answering with citation and hallucination checks."
requires-python = ">=3.10"
dependencies = ["beautifulsoup4>=4.12.0"]

[tool.setuptools.packages.find]
where = ["src"]
